--- a/index.html
+++ b/index.html
@@ -1,65 +1,109 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextByte-Studios</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="imagens/logo.png">
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" style="box-shadow: 0 0 20px rgb(0, 0, 0);">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark"
+            style="box-shadow: 0 0 20px rgb(0, 0, 0);">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="imagens/logo.png" alt="Logo NextByte-Studios" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="imagens/logo.png" alt="Logo NextByte-Studios" width="30" height="24"
+                        class="d-inline-block align-text-top">
                     - NextByte Studios ®
                 </a>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">🏠Página inicial</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="contatos.html">📞Contatos</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        🕹️Jogos
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="!!!!!!!!">💥Jogo do tanquinho💥</a></li>
-                        <li><a class="dropdown-item" href="!!!!!!!!">🔫Redenção Gaúcha🧉 ‼️Lançamento em 16/07/2027!</a></li>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">🏠Página inicial</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contatos.html">📞Contatos</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                🕹️Jogos
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="!!!!!!!!">💥Jogo do tanquinho💥</a></li>
+                                <li><a class="dropdown-item" href="!!!!!!!!">🔫Redenção Gaúcha🧉 ‼️Lançamento em
+                                        16/07/2027!</a></li>
+                            </ul>
+                        </li>
                     </ul>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Digite aqui..." aria-label="Search"/>
-                    <button class="btn btn-light" type="submit"><strong>Buscar</strong></button>
-                </form>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Digite aqui..."
+                            aria-label="Search" />
+                        <button class="btn btn-light" type="submit"><strong>Buscar</strong></button>
+                    </form>
                 </div>
             </div>
-                <div class="toast align-items-center text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="d-flex">
-                    <div class="toast-body">
-                    Hello, world! This is a toast message.
-                    </div>
-                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-        </div>
         </nav>
     </header>
 
     <main>
-
+        <div id="carouselExampleDark" class="carousel carousel-dark slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner container">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="imagens/nb_studios.png" class="d-block w-100" alt="NextByte-Studios®">
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="imagens/rg2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagens/tanquinho.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="container">
+            <h5 style="text-align: center;">😗SOBRE NÓS <br>_________________________ </h5>
+            <p> A NEXTBYTE Studios® é uma desenvolvedora de jogos brasileira comprometida em criar experiências
+                imersivas e
+                emocionantes para jogadores de todas as partes do mundo. Combinando tecnologia, criatividade e
+                uma forte dedicação ao detalhe, desenvolvemos jogos que prendem, desafiam, encantam e ensinam. Seja
+                explorando
+                mundos vastos, enfrentando perigos ou vivendo histórias inesquecíveis, os jogos da NEXTBYTE colocam o
+                jogador no
+                centro da aventura. Nosso objetivo é simples: transformar cada byte em uma jornada épica!😎</p>
+        </div>
 
     </main>
 
     <footer>
         © Todos os direitos reservados <strong>NextByte-Studios®</strong>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
