Alterações ortográficas, Contatos versão final.

--- a/contatos.html
+++ b/contatos.html
@@ -56,7 +56,7 @@
     <div class="inicio container text-center">
       <div class="row">
         <div class="col">
-          <h1 class="titulo">Contato:</h1>
+          <h1 class="titulo">Contatos</h1>
 
           <h4 class="h4_titulo">Entre em contato conosco:</h4>
 
@@ -67,13 +67,13 @@
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="titulo form-label">Mensagem</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-              placeholder="Digite sua mensagem"></textarea>
+              placeholder="Digite sua mensagem aqui"></textarea>
             <br>
             <button type="button" class="btn btn-secondary">Enviar</button>
           </div>
 
           <div >
-            <h4 class="titulo div espaco">Nos acopanhe pelas redes socais</h4>
+            <h4 class="titulo div espaco">Nos acompanhe pelas redes socais</h4>
             <div class="links_redes div_contatos">
               <a class="a_contatos" href="#" target="_blank">
                 <img class="img_contatos" src="/imagens/instagram.png" alt="Instagram">
