--- a/jogo_tanquinho.html
+++ b/jogo_tanquinho.html
@@ -37,7 +37,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="jogo_tanquinho.html">💥[BETA] Jogo do tanquinho💥</a></li>
-                                <li><a class="dropdown-item" href="!!!!!!!!">🔫Redenção Gaúcha🧉 ‼️Lançamento em
+                                <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉 ‼️Lançamento em
                                         16/07/2027!</a></li>
                             </ul>
                         </li>
