Atualização de links no arquivo contatos.html e correção ortográfica no red_gaucho.html trocando o acento na palavra guri.

--- a/red_gaucha.html
+++ b/red_gaucha.html
@@ -67,7 +67,7 @@
             </video>
             <h5 style="padding-top: 2%;">🔫Redenção Gaúcha🧉</h5>
             <p>
-                Prepare-se para viver a vida de um gurí campeiro nos pampas do Rio Grande do Sul como nunca antes! 🐎
+                Prepare-se para viver a vida de um guri campeiro nos pampas do Rio Grande do Sul como nunca antes! 🐎
             </p>
             <p style="text-align: left;">
                 🌾Explore campos sem fim, cruze estâncias, vilarejos e cidades inspiradas na cultura gaúcha. Enfrente animais, participe de revoluções, lide com contrabandistas de fronteira e faça sua própria história no velho sul brasileiro!
