--- a/contatos.html
+++ b/contatos.html
@@ -30,8 +30,8 @@
                         🕹️Jogos
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="!!!!!!!!">💥Jogo do tanquinho💥</a></li>
-                        <li><a class="dropdown-item" href="!!!!!!!!">🔫Redenção Gaúcha🧉 ‼️Lançamento em 16/07/2027!</a></li>
+                        <li><a class="dropdown-item" href="jogo_tanquinho.html">💥Jogo do tanquinho💥</a></li>
+                        <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉 ‼️Lançamento em 16/07/2027!</a></li>
                     </ul>
                     </li>
                 </ul>
