--- a/jogo_tanquinho.html
+++ b/jogo_tanquinho.html
@@ -58,7 +58,7 @@
             <video style="padding-top: 2%;"
                 controls 
                 width="700"
-                poster="imagens/capa_jt.jpg">
+                poster="imagens/capa_jt.png">
                 
                 <source src="videos/video_jt.mp4" type="video/mp4" />
 
