Correção de responsividade

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         class="d-inline-block align-text-top">
                     - NextByte Studios ®
                 </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -37,7 +40,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="jogo_tanquinho.html">💥[BETA] Jogo do tanquinho💥</a></li>
-                                <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉 ‼️Lançamento em 16/07/2027!</a></li>
+                                <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉</a></li>
                             </ul>
                         </li>
                     </ul>
