--- a/red_gaucha.html
+++ b/red_gaucha.html
@@ -21,6 +21,10 @@
                         class="d-inline-block align-text-top">
                     - NextByte Studios ®
                 </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -36,9 +40,9 @@
                                 🕹️Jogos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="jogo_tanquinho.html">💥[BETA] Jogo do tanquinho💥</a></li>
-                                <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉 ‼️Lançamento em
-                                        16/07/2027!</a></li>
+                                <li><a class="dropdown-item" href="jogo_tanquinho.html">💥[BETA] Jogo do tanquinho💥</a>
+                                </li>
+                                <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -53,25 +57,27 @@
     </header>
 
     <main>
-         <div class="container" style="text-align: center;">
+        <div class="container" style="text-align: center;">
             <h3>‼️Lançamento em 16/07/2027!📅</h3>
-            <video style="padding-top: 2%;"
-                controls 
-                width="700"
-                poster="imagens/capa_rg2.jpg">
-                
+            <video style="padding-top: 2%;" controls width="100%" poster="imagens/capa_rg2.jpg">
+
                 <source src="videos/video_rg2.mp4" type="video/mp4" />
 
                 Baixe o trailer:
                 <a href="videos/video_rg2.mp4">MP4</a>
             </video>
+            <p style="font-size: small;">⚠️Conteúdo para fins acadêmicos, as gravações foram retiradas do Red Dead Redemption 2 (Rockstar Games, 2018)</p>
             <h5 style="padding-top: 2%;">🔫Redenção Gaúcha🧉</h5>
             <p>
                 Prepare-se para viver a vida de um guri campeiro nos pampas do Rio Grande do Sul como nunca antes! 🐎
             </p>
             <p style="text-align: left;">
-                🌾Explore campos sem fim, cruze estâncias, vilarejos e cidades inspiradas na cultura gaúcha. Enfrente animais, participe de revoluções, lide com contrabandistas de fronteira e faça sua própria história no velho sul brasileiro!
-                Monte no seu cavalo, dome o gado, jogue truco nas bodegas, enfrente a lendas do folclóre brasileiro, roube um trem, prepare seu chimarrão e escolha seu caminho: será um homem de honra, um fora-da-lei ou um revolucionário?
+                🌾Explore campos sem fim, cruze estâncias, vilarejos e cidades inspiradas na cultura gaúcha. Enfrente
+                animais, participe de revoluções, lide com contrabandistas de fronteira e faça sua própria história no
+                velho sul brasileiro!
+                Monte no seu cavalo, dome o gado, jogue truco nas bodegas, enfrente a lendas do folclóre brasileiro,
+                roube um trem, prepare seu chimarrão e escolha seu caminho: será um homem de honra, um fora-da-lei ou um
+                revolucionário?
             </p>
             <p>Do churrasco à pólvora, da gaita ao disparo, a sua redenção começa aqui...👇<br>
             </p>
