--- a/contatos.html
+++ b/contatos.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NextByte-Studios</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="imagens/logo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NextByte-Studios</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="imagens/logo.png">
 </head>
+
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" style="box-shadow: 0 0 20px rgb(0, 0, 0);">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark"
+            style="box-shadow: 0 0 20px rgb(0, 0, 0);">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="imagens/logo.png" alt="Logo NextByte-Studios" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="imagens/logo.png" alt="Logo NextByte-Studios" width="30" height="24"
+                        class="d-inline-block align-text-top">
                     - NextByte Studios ®
                 </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">🏠Página inicial</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="contatos.html">📞Contatos</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        🕹️Jogos
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="jogo_tanquinho.html">💥Jogo do tanquinho💥</a></li>
-                        <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉 ‼️Lançamento em 16/07/2027!</a></li>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">🏠Página inicial</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="contatos.html">📞Contatos</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                🕹️Jogos
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="jogo_tanquinho.html">💥[BETA] Jogo do tanquinho💥</a></li>
+                                <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉</a></li>
+                            </ul>
+                        </li>
                     </ul>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Digite aqui..." aria-label="Search"/>
-                    <button class="btn btn-light" type="submit"><strong>Buscar</strong></button>
-                </form>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Digite aqui..."
+                            aria-label="Search" />
+                        <button class="btn btn-light" type="submit"><strong>Buscar</strong></button>
+                    </form>
                 </div>
             </div>
-                <div class="toast align-items-center text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="d-flex">
-                    <div class="toast-body">
-                    Hello, world! This is a toast message.
-                    </div>
-                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-        </div>
         </nav>
     </header>
 
-<main>
+  <main>
     <div class="inicio container text-center">
       <div class="row">
         <div class="col">
@@ -72,22 +74,21 @@
             <button type="button" class="btn btn-secondary">Enviar</button>
           </div>
 
-          <div >
+          <div>
             <h4 class="titulo div espaco">Nos acompanhe pelas redes socais</h4>
             <div class="links_redes div_contatos">
               <a class="a_contatos" href="#" target="_blank">
-                <img class="img_contatos" src="/imagens/instagram.png" alt="Instagram">
+                <img class="img_contatos" src="imagens/instagram.png" alt="Instagram">
                 Instagram
               </a>
               <br>
-              <a class="a_contatos" href="#"
-                target="_blank">
-                <img class="img_contatos" src="/imagens/facebook.png" alt="Facebook">
+              <a class="a_contatos" href="#" target="_blank">
+                <img class="img_contatos" src="imagens/facebook.png" alt="Facebook">
                 Facebook
               </a>
               <br>
               <a class="a_contatos" href="#" target="_blank">
-                <img class="img_contatos" src="/imagens/twitter.png" alt="Twitter">
+                <img class="img_contatos" src="imagens/twitter.png" alt="Twitter">
                 Twitter
               </a>
             </div>
@@ -101,8 +102,10 @@
 
 </html>
 <footer>
-        © Todos os direitos reservados <strong>NextByte-Studios®</strong>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  © Todos os direitos reservados <strong>NextByte-Studios®</strong>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
+
 </html>
