Correção de bugs no index

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                                 🕹️Jogos
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="!!!!!!!!">💥Jogo do tanquinho💥</a></li>
-                                <li><a class="dropdown-item" href="!!!!!!!!">🔫Redenção Gaúcha🧉</a></li>
+                                <li><a class="dropdown-item" href="jogo_tanquinho.html">💥Jogo do tanquinho💥</a></li>
+                                <li><a class="dropdown-item" href="red_gaucha.html">🔫Redenção Gaúcha🧉</a></li>
                             </ul>
                         </li>
                     </ul>
